kubernetes/services/artifact-keeper/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: artifact-keeper
  annotations:
    external-dns.alpha.kubernetes.io/controller: "false"
    gatus.home-operations.com/enabled: "false"
    gatus.home-operations.com/endpoint: |-
      name: Artifact Keeper
      conditions:
        - "[STATUS] == 200"
      url: https://registry.cloud.danmanners.com/
      method: HEAD
spec:
  hostnames:
    - registry.cloud.danmanners.com
  parentRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      name: gwapi
      namespace: default
      sectionName: https-cloud
  rules:
    - name: api
      backendRefs:
        - group: ""
          kind: Service
          name: artifact-keeper-backend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
      timeouts:
        backendRequest: 0s
        request: 0s
    - name: web
      backendRefs:
        - group: ""
          kind: Service
          name: artifact-keeper-web
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 0s
        request: 0s
